resolved fdo#66620 keywords occur in unquoted context only

Change-Id: I4de41e5b66f1a856a786c521ca4ef2eec14c7499